examples/test/testpolicy7212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7212
  namespace: namespace18
spec:
  podSelector:
    matchLabels:
      key6: value47
      key10: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value47
          key36: value9
          key10: value32
      podSelector:
        matchLabels:
          key6: value31
          key15: value34
          key4: value4
